# PasswordFinder

./: .env  .gitignore  LICENSE  README.md  benchmark-16.json  benchmark-16.md  benchmark-16.txt  benchmark-4-16.json  benchmark-8-16.json  crack.sh  dune-project  password_finder.opam  passwords-mock.txt  test.txt
benchmark/: .env  README.md  benchmark.json  benchmark.md  benchmark.sh  benchmark_2022.12.21_00.46.17.json  benchmark_2022.12.21_00.46.17.md  benchmark_2022.12.21_08.12.05.json  benchmark_2022.12.21_08.12.05.md  benchmark_2022.12.21_08.46.47.json  benchmark_2022.12.21_08.46.47.md  benchmark_2022.12.21_09.41.57.json  benchmark_2022.12.21_09.41.57.md  benchmark_2022.12.21_09.58.16.json  benchmark_2022.12.21_09.58.16.md  passwords-bench.txt
benchmarking/: .env  README.md  benchmark.sh  benchmark_passwords.json  benchmark_passwords.md  benchmark_passwords_bench_long.json  benchmark_passwords_bench_long.md  passwords.txt  passwords_bench_long.txt
lib/: dune  utils.ml
lib/app_domain/: app_domain.ml  app_domain.mli  dune
lib/app_io/: app_io.ml  app_io.mli  dune
lib/app_worker/: app_worker.ml  app_worker.mli  dune  scheduler.ml  worker_communication.ml  worker_core.ml  worker_helper.ml  worker_pipeline.ml
lib/config/: config.ml  dune
lib/io/: dune  io.ml  io.mli
lib/pipeline/: builder.ml  builder.mli  dune  hub.ml  hub.mli  (+6 more)
one_channel_poc/: README.md  dune-project  output.txt
poc_shared_out_channel/: README.md  dune-project  poc_shared_out_channel.opam
poc_shared_out_channel/lib/: dune
poc_shared_out_channel/test/: dune
report/: report.tex
(+5 files in other folders)
