(lang dune 3.6)

(name poc_shared_out_channel)

(generate_opam_files true)

(source
 (github andrii-venher/PasswordFinder))

(authors "Andrii Venher")

(license MIT)

(package
 (name poc_shared_out_channel)
 (synopsis "POC of shared output channel usage.")
 (description "")
 (depends ocaml dune)
 )
 